syntax = "proto3"; //指定版本，必须要写（proto3、proto2）
//import "google/protobuf/any.proto";

//生成类的类名  
option java_outer_classname = "MessageClass";
 
message Message{

string id=1;//消息唯一ID

string identify=2;// 协议标志
 
string version=3;// 协议版本
 
int32 reqType=4;// 请求类型
 
int64 msgTime=5;//消息时间

string serverId=6;//服务器标志

//--------------------ack-------------------

string ack=7;//ack

//-------------------user-------------------

string senderId=8;// 发送人ID

string senderName=9;//发送人名称

string senderHeadImgUrl=10;//发送人头像URL
 
string receiverId=11;// 接收人ID

string receiverName=12;// 接收人名称

string receiverHeadImgUrl=13;// 接收人头像

//--------------------group-----------------

string groupId=14;// 群ID

string groupName=15;//群名称

string groupHeadImgUrl=16;//群头像

string atUserId=17;//需要@的人的id


//------------------msg----------------------

string body=18;//消息体

int32 bodyType=19;//消息类型

int32 bodyLength=20;//消息体长度

//-----------------status---------------------

int32 status=21;//确认状态

int32 result=22;//业务结果

//-----------------expansion------------------

string field1=23;

string field2=24;

string field3=25;


}
